--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "98ff3f82-4e21-48b2-ad89-b6b6d2568d38"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
